# ai-infra

./: .gitignore  CMakeLists.txt  README.md  dl_conf.md  env.md
C C++/C/: C程序设计概述.md  a.cpp  hello  hello.cpp
C&C++/: 编译.md
C&C++/C/: 2.数据及运算.md  3.流程控制.md  4.数组.md  5.指针.md  6.指针和数组.md  8.函数.md
C&C++/C++/: 2.常量变量与修饰符.md  2.常量变量修饰符.md  2.常量变量运算符.md  7.标准IO.md  C++程序设计概述.md  README.md  从 Hello world 了解C++ .md
C&C++/coding/: primeFactor.cpp  rootOfEquation.Cpp  基础程序.md
DL/classify/: VGG.md
DL/object-detection/: RCNN.md  YOLO.md
Data structure/: BinaryTree.py  Data structure.md  deque.py  link.md  lists.py  queue.py  stack.py
Data structure/list/: lists.py
Data structure/queue/: loop.py  loopqueue.py
Deep learning framework/tensorflow/: 4_6_linermodel.py  7_1.py  7_1_backup.py
Deep-learning-framework/: README.md
Deep-learning-framework/tensorflow/: 5_2_mnist.py  7-2线性多分类.py
Learning python/: 1. python 是如何运行的？.ipynb  note.md
Learning python/5. 函数和生成器/: 1. 函数.ipynb
Learning python/9. 面向对象/: class.md  class.py
ML/: LR.md  ML.md  SVM.md
Offer/: AI 算法岗部分知识点集锦（预览版0.1）.md  readme.md
Offer/DL/: DL.md
Offer/Linux/: Linux.md  markdown_note.md  my_ubuntu16.04_DL_config.md
Offer/ML/: LR.md  ML.md  SVM.md  knn.md  (+4 more)
Statistical-learning-method/: readme.md
include/: dlFunction.h  dlVariable.h  dlzero.h
src/: dlCommon.cpp  dlFunction.cpp  dlVariable.cpp  variable.cpp
tests/: CMakeLists.txt
tests/dlzero/backward/: CMakeLists.txt  main.cpp
tests/numCpp/sum/: CMakeLists.txt  main.cpp
数据结构/: BinaryTree.py
数据结构与算法/: link.md  queue.py  stack.py
(+102 files in other folders)
